--- a/dist.ini
+++ b/dist.ini
@@ -1,33 +1,28 @@
 name        = MooseX-ConfigFromFile
-author      = Brandon L. Black, <blblack@gmail.com>
+author      = Brandon L. Black <blblack@gmail.com>
 abstract    = An abstract Moose role for setting attributes from a configfile
 copyright_holder = Brandon L. Black
+copyright_year = 2007
 license     = Perl_5
 
 [@Author::ETHER]
-:version = 0.029
+:version = 0.096
 Authority.authority = cpan:STEVAN
-server = github
 AutoPrereqs.skip[0] = ^A$
 AutoPrereqs.skip[1] = ^Generic
-AutoPrereqs.skip[2] = ^MooseX::SimpleConfig$
-AutoPrereqs.skip[3] = ^MooseX::Getopt$
 Test::MinimumVersion.max_target_perl = 5.008003
+StaticInstall.dry_run = 0   ; we can safely set this here
 
 [MetaResources]
 x_IRC = irc://irc.perl.org/#moose
 x_MailingList = http://lists.perl.org/list/moose.html
 
-[Prereqs / TestRecommends]
-MooseX::SimpleConfig = 0
-MooseX::Getopt = 0
-
-; authordep Pod::Weaver::Section::Contributors
-
-[ContributorsFromGit]
+[Prereqs::Soften]
+copy_to = develop.requires
+module = MooseX::Getopt
 
 [Prereqs / DevelopRequires]
 Test::Warnings = 0
 
-; missing contributor: Zbigniew Lukasiak -- do we have an email address
-; so I can add an empty git commit for him?
+[Test::CheckBreaks]
+conflicts_module = Moose::Conflicts
